--- a/4. Forme Matricielle.tex
+++ b/4. Forme Matricielle.tex
@@ -144,7 +144,7 @@ En d'autres termes,
 
 \mbox{}
 
-Forme canonique: on multiplie la partie supérieure par $\bB^{-1}$ et on récupère l'expression de l'objectif en termes de coûts réduits pour la partie inférieure:
+Forme canonique: %on multiplie la partie supérieure par $\bB^{-1}$ et on récupère l'expression de l'objectif en termes de coûts réduits pour la partie inférieure:
 \[
 \begin{pmatrix}
 \bI & \bB^{-1}\bD & \bB^{-1}\bb \\
