--- a/3. Variables Artificielles.tex
+++ b/3. Variables Artificielles.tex
@@ -86,7 +86,7 @@ où, s.p.d.g., $\bb \geq 0$, et supposons qu'il n'y a aucune variable isolée.
 
 Considérons le programme artificiel
 \begin{align*}
-\min_y \ & \sum_{i = 1}^m y_i\\
+\min_{\bx,\by} \ & \sum_{i = 1}^m y_i\\
 \mbox{t.q. } & \bA\bx + \by = \bb,\\
 & \bx \geq 0, \ \by \geq 0.
 \end{align*}
